--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benim GitHub Sayfam</title>
+  <title>How to Fix XBOX Game Pass All Error Code</title>
 
   <!-- Google Site Doğrulama Etiketi -->
   <meta name="google-site-verification" content="f-c6iDy8E-MwrQLLrz1J54E0-OXRGrMh1zsVS9mKlj0" />
