--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>How to Fix XBOX Game Pass All Error Code</title>
-
+    <meta charset="UTF-8">
+    <title>Fix XBOX Game Pass Errors</title>
   <!-- Google Site Doğrulama Etiketi -->
   <meta name="google-site-verification" content="f-c6iDy8E-MwrQLLrz1J54E0-OXRGrMh1zsVS9mKlj0" />
 </head>
 <body>
-# How to Fix XBOX Game Pass All Error Code?
+    <h1>How to Fix XBOX Game Pass All Error Code?</h1>
 
-- Download and Extract "<a href="https://github.com/Maxbora/XBOX-Gamepass-Gaming-Services-Repair-Tool/releases/download/XBOX-Gamepass-Gaming-Services-Repair-Tool/XBOX.Gamepass.Gaming.Services.Repair.Tool.zip">XBOX-Gamepass-Gaming-Services-Repair-Tool.zip</a>" file!
-- RUN <b>"Gamepass Repair Tool"</b> app!
-- and Fix!
-<br><br>
-Easy to use!<br>
-Suitable for all Windows operating systems!<br>
-Completely safe!
+    <ul>
+        <li>Download and Extract <a href="https://github.com/Maxbora/XBOX-Gamepass-Gaming-Services-Repair-Tool/releases/download/XBOX-Gamepass-Gaming-Services-Repair-Tool/XBOX.Gamepass.Gaming.Services.Repair.Tool.zip">"XBOX-Gamepass-Gaming-Services-Repair-Tool.zip"</a> file!</li>
+        <li>RUN "<strong>Gamepass Repair Tool</strong>" app!</li>
+        <li>and Fix!</li>
+    </ul>
 
+    <p>Easy to use!<br>
+    Suitable for all Windows operating systems!<br>
+    Completely safe!</p>
 
-<br><br><br><br><br>
-xbox game pass error code #0x80070426<br>
-xbox game pass error code #0x803f8001<br>
-xbox game pass error code #0x80073d0d<br>
-xbox game pass error code #0x87e00196<br>
-xbox game pass error code #0xc0ea0001<br>
-xbox game pass error code #0x87e00196<br>
-xbox game pass error code #0x80073d05<br>
-xbox game pass error code #0x87e0000f<br>
-xbox game pass error code #0x87e00005<br>
-xbox game pass error code #0x80073cf3<br>
-xbox game pass error code #0x80070426<br>
-xbox game pass error code #0x87e0000d<br>
+    <br>
+
+    <p> xbox game pass error code #0x80070426<br>
+        xbox game pass error code #0x803f8001<br>
+        xbox game pass error code #0x80073d0d<br>
+        xbox game pass error code #0x87e00196<br>
+        xbox game pass error code #0xc0ea0001<br>
+        xbox game pass error code #0x87e00196<br>
+        xbox game pass error code #0x80073d05<br>
+        xbox game pass error code #0x87e0000f<br>
+        xbox game pass error code #0x87e00005<br>
+        xbox game pass error code #0x80073cf3<br>
+        xbox game pass error code #0x80070426<br>
+        xbox game pass error code #0x87e0000d
+    </p>
 </body>
 </html>
