--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Fix XBOX Game Pass Errors</title>
+  <!-- Arama motoru için açıklama -->
+  <meta name="description" content="XBOX Game Pass hata kodlarının çözümü, Fix XBOX Game Pass error codes">
+  <!-- Anahtar kelimeler -->
+  <meta name="keywords" content="xbox game pass hata kodu, 0x80070426, gamepass çözüm, xbox error fix, windows xbox sorun çözümü, xbox game pass fix error codes, game pass repair tool">
   <!-- Google Site Doğrulama Etiketi -->
   <meta name="google-site-verification" content="f-c6iDy8E-MwrQLLrz1J54E0-OXRGrMh1zsVS9mKlj0" />
 </head>
